--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,23 @@
   "description": "Server for Biblioteca Project.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "server": "node_modules/.bin/nodemon index.js",
+    "dev": "node_modules/.bin/nodemon index.js"
   },
-  "author": "",
-  "license": "ISC"
+  "author": "Saqib Jallal",
+  "license": "ISC",
+  "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "express-handlebars": "^5.3.2",
+    "express-validator": "^6.11.1",
+    "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.1",
+    "mysql2": "^2.2.5"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.7"
+  }
 }
